--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "og": "tsx scripts/generate-og.ts"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "0.7.0",
+    "clsx": "2.1.0",
     "framer-motion": "^11.11.17",
     "gray-matter": "4.0.3",
     "lucide-react": "^0.468.0",
@@ -28,9 +31,7 @@
     "rehype-autolink-headings": "7.1.0",
     "rehype-slug": "6.0.0",
     "remark-gfm": "4.0.0",
-    "tailwind-merge": "2.2.1",
-    "clsx": "2.1.0",
-    "@radix-ui/react-slot": "^1.1.0"
+    "tailwind-merge": "2.2.1"
   },
   "devDependencies": {
     "@resvg/resvg-js": "2.6.2",
@@ -46,12 +47,12 @@
     "postcss": "8.4.38",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.11",
+    "serve": "14.2.1",
     "tailwindcss": "3.4.3",
+    "tailwindcss-animate": "1.0.7",
     "tsx": "4.7.1",
     "typescript": "5.4.5",
-    "vitest": "1.5.0",
-    "serve": "14.2.1",
-    "tailwindcss-animate": "1.0.7"
+    "vitest": "1.5.0"
   },
   "overrides": {
     "@types/react": "19.2.0"
