--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "framer-motion": "^11.11.17",
     "gray-matter": "4.0.3",
     "lucide-react": "^0.468.0",
-    "next": "15.5.4",
+    "next": "16.0.7",
     "next-mdx-remote": "5.0.0",
     "next-themes": "^0.4.4",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "rehype-autolink-headings": "7.1.0",
     "rehype-slug": "6.0.0",
     "remark-gfm": "4.0.0",
@@ -39,10 +39,10 @@
     "@tailwindcss/typography": "0.5.10",
     "@testing-library/jest-dom": "6.4.2",
     "@types/node": "20.12.12",
-    "@types/react": "19.2.0",
+    "@types/react": "19.2.7",
     "autoprefixer": "10.4.18",
-    "eslint": "8.57.0",
-    "eslint-config-next": "15.5.4",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "16.0.7",
     "eslint-config-prettier": "9.1.0",
     "jsdom": "24.0.0",
     "postcss": "8.4.38",
@@ -56,6 +56,6 @@
     "vitest": "1.5.0"
   },
   "overrides": {
-    "@types/react": "19.2.0"
+    "@types/react": "19.2.7"
   }
 }
