--- a/package.json
+++ b/package.json
@@ -48,12 +48,11 @@
     "postcss": "8.4.38",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.11",
-    "serve": "14.2.1",
     "tailwindcss": "3.4.3",
     "tailwindcss-animate": "1.0.7",
     "tsx": "4.7.1",
     "typescript": "5.4.5",
-    "vitest": "1.5.0"
+    "vitest": "^4.0.15"
   },
   "overrides": {
     "@types/react": "19.2.7"
