chore: update Next.js and React versions, and fix linting script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "serve -s out",
-    "lint": "next lint",
+    "lint": "eslint \"./**/*.{js,jsx,ts,tsx}\"",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md,mdx,css}\"",
     "test": "vitest",
     "test:watch": "vitest --watch",
@@ -24,11 +24,11 @@
     "framer-motion": "^11.11.17",
     "gray-matter": "4.0.3",
     "lucide-react": "^0.468.0",
-    "next": "16.0.7",
+    "next": "^16.1.0",
     "next-mdx-remote": "5.0.0",
     "next-themes": "^0.4.4",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "rehype-autolink-headings": "7.1.0",
     "rehype-slug": "6.0.0",
     "remark-gfm": "4.0.0",
