--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint \"./**/*.{js,jsx,ts,tsx}\"",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md,mdx,css}\"",
     "test": "vitest",
+    "test:coverage": "vitest --coverage",
     "test:watch": "vitest --watch",
     "type-check": "tsc --noEmit",
     "export": "next build && next export",
@@ -38,8 +39,10 @@
     "@resvg/resvg-js": "2.6.2",
     "@tailwindcss/typography": "0.5.10",
     "@testing-library/jest-dom": "6.4.2",
+    "@testing-library/react": "16.3.0",
     "@types/node": "20.12.12",
     "@types/react": "19.2.7",
+    "@vitest/coverage-v8": "^4.0.16",
     "autoprefixer": "10.4.18",
     "eslint": "^9.39.1",
     "eslint-config-next": "16.0.7",
