chore: update package.json to add format check script and remove unused dependencies; delete prettier config file

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "serve -s out",
     "lint": "biome lint .",
     "format": "biome format --write .",
+    "format:check": "biome check . --formatter-enabled=true --linter-enabled=false",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
     "test:watch": "vitest --watch",
@@ -45,13 +46,8 @@
     "@types/react": "19.2.7",
     "@vitest/coverage-v8": "^4.0.16",
     "autoprefixer": "10.4.18",
-    "eslint": "^9.39.1",
-    "eslint-config-next": "16.0.7",
-    "eslint-config-prettier": "9.1.0",
     "jsdom": "24.0.0",
     "postcss": "8.4.38",
-    "prettier": "3.2.5",
-    "prettier-plugin-tailwindcss": "0.5.11",
     "tailwindcss": "3.4.3",
     "tailwindcss-animate": "1.0.7",
     "tsx": "4.7.1",
