--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "gray-matter": "4.0.3",
     "lucide-react": "^0.468.0",
     "next": "^16.1.0",
-    "next-mdx-remote": "5.0.0",
+    "next-mdx-remote": "^6.0.0",
     "next-themes": "^0.4.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
